feat: add uv parsing info

--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,9 +1,9 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: snyk-poetry-lockfile-parser
+  name: snyk-uv-lockfile-parser
   annotations:
-    github.com/project-slug: snyk/snyk-poetry-lockfile-parser
+    github.com/project-slug: snyk/snyk-uv-lockfile-parser
     github.com/team-slug: snyk/os-managed
 spec:
   type: external-library
