--- a/test/fixtures/scenarios/one-dep-one-legacydevdep-one-devdep-group/pyproject.toml
+++ b/test/fixtures/scenarios/one-dep-one-legacydevdep-one-devdep-group/pyproject.toml
@@ -6,3 +6,13 @@ authors = []
 dependencies = [
   "six>=1.14,<1.15"
 ]
+
+[tool.uv]
+dev-dependencies = [
+  "isOdd==0.1.2"
+]
+
+[dependency-groups]
+dev = [
+  "simple-enum==0.0.6"
+]
