--- a/test/fixtures/scenarios/circular-dependency/pyproject.toml
+++ b/test/fixtures/scenarios/circular-dependency/pyproject.toml
@@ -1,14 +1,10 @@
-[tool.poetry]
+[project]
 name = "myPkg"
 version = "1.42.2"
 description = "This is not a genuine representation of the install. This is just the minimum producible to illustrate."
 authors = []
-
-[tool.poetry.dependencies]
-python = "^3.6"
-dask = "^2020.12.0"
-distributed = "^2020.12.0"
-
-[build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires-python = ">=3.6"
+dependencies = [
+    "dask==2020.12.0",
+    "distributed==2020.12.0"
+]
