--- a/test/fixtures/scenarios/conflicting-python-declarations/pyproject.toml
+++ b/test/fixtures/scenarios/conflicting-python-declarations/pyproject.toml
@@ -1,15 +1,10 @@
-[tool.poetry]
+[project]
 name = "conflicting-python-declarations"
 version = "0.1.0"
 description = ""
-authors = ["Daniel Trunley <daniel.trunley@snyk.io>"]
-
-[tool.poetry.dependencies]
-python = "^3.8"
-typing = { version = "*", python = "<3.4" }
-
-[tool.poetry.dev-dependencies]
-
-[build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+authors = ["Clifford Richardson <clifford.richardson@klarna.com>"]
+requires-python = ">=3.8,<3.9"
+dependencies = [
+  "typing; python_version < '3.4'"
+]
+[dependency-groups]
