--- a/test/fixtures/scenarios/unsafe-packages/pyproject.toml
+++ b/test/fixtures/scenarios/unsafe-packages/pyproject.toml
@@ -1,13 +1,8 @@
-[tool.poetry]
+[project]
 name = "unsafe-packages"
 version = "0.1.0"
 description = ""
-authors = ["Daniel Trunley <daniel.trunley@snyk.io>"]
-
-[tool.poetry.dependencies]
-python = "^3.8"
-gunicorn = "^20.0.4"
-
-[build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+authors = ["Clifford Richardson <clifford.richardson@klarna.com>"]
+dependencies = [
+  "gunicorn==20.0.4"
+]
